tests/baselines/reference/privacyGloInterface(strict=true).errors.txt
privacyGloInterface.ts(12,9): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(13,9): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(17,9): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(18,9): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(28,9): error TS2411: Property 'a' of type 'C1_public | undefined' is not assignable to 'string' index type 'C2_private'.
privacyGloInterface.ts(29,9): error TS2411: Property 'b' of type 'C2_private | undefined' is not assignable to 'string' index type 'C2_private'.
privacyGloInterface.ts(31,9): error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(32,9): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(39,9): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(40,9): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(44,9): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(45,9): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(55,9): error TS2411: Property 'a' of type 'C1_public | undefined' is not assignable to 'string' index type 'C2_private'.
privacyGloInterface.ts(56,9): error TS2411: Property 'b' of type 'C2_private | undefined' is not assignable to 'string' index type 'C2_private'.
privacyGloInterface.ts(58,9): error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(59,9): error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(73,5): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(76,5): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
privacyGloInterface.ts(85,5): error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.


==== privacyGloInterface.ts (19 errors) ====
    module m1 {
        export class C1_public {
            private f1() {
            }
        }
    
    
        class C2_private {
        }
    
        export interface C3_public {
            (c1: C1_public);
            ~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
            (c1: C2_private);
            ~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
            (): C1_public;
            (c2: number): C2_private;
    
            new (c1: C1_public);
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
            new (c1: C2_private);
            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
            new (): C1_public;
            new (c2: number): C2_private;
    
            [c: number]: C1_public;
            [c: string]: C2_private;
    
            x: C1_public;
            y: C2_private;
    
            a?: C1_public;
            ~
!!! error TS2411: Property 'a' of type 'C1_public | undefined' is not assignable to 'string' index type 'C2_private'.
            b?: C2_private;
            ~
!!! error TS2411: Property 'b' of type 'C2_private | undefined' is not assignable to 'string' index type 'C2_private'.
    
            f1(a1: C1_public);
            ~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
            f2(a1: C2_private);
            ~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
            f3(): C1_public;
            f4(): C2_private;
    
        }
    
        interface C4_private {
            (c1: C1_public);
            ~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
            (c1: C2_private);
            ~~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
            (): C1_public;
            (c2: number): C2_private;
    
            new (c1: C1_public);
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
            new (c1: C2_private);
            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
            new (): C1_public;
            new (c2: number): C2_private;
    
            [c: number]: C1_public;
            [c: string]: C2_private;
    
            x: C1_public;
            y: C2_private;
    
            a?: C1_public;
            ~
!!! error TS2411: Property 'a' of type 'C1_public | undefined' is not assignable to 'string' index type 'C2_private'.
            b?: C2_private;
            ~
!!! error TS2411: Property 'b' of type 'C2_private | undefined' is not assignable to 'string' index type 'C2_private'.
    
            f1(a1: C1_public);
            ~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
            f2(a1: C2_private);
            ~~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f2', which lacks return-type annotation, implicitly has an 'any' return type.
            f3(): C1_public;
            f4(): C2_private;
    
        }
    }
    
    class C5_public {
        private f1() {
        }
    }
    
    
    interface C7_public {
        (c1: C5_public);
        ~~~~~~~~~~~~~~~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
        (): C5_public;
    
        new (c1: C5_public);
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.
        new (): C5_public;
    
        [c: number]: C5_public;
    
        x: C5_public;
    
        a?: C5_public;
    
        f1(a1: C5_public);
        ~~~~~~~~~~~~~~~~~~
!!! error TS7010: 'f1', which lacks return-type annotation, implicitly has an 'any' return type.
        f3(): C5_public;
    }
    
    module m3 {
        export interface m3_i_public {
            f1(): number;
        }
    
        interface m3_i_private {
            f2(): string;
        }
    
        interface m3_C1_private extends m3_i_public {
        }
        interface m3_C2_private extends m3_i_private {
        }
        export interface m3_C3_public extends m3_i_public {
        }
        export interface m3_C4_public extends m3_i_private {
        }
    
        interface m3_C5_private extends m3_i_private, m3_i_public {
        }
        export interface m3_C6_public extends  m3_i_private, m3_i_public {
        }
    }
    
    interface glo_i_public {
        f1(): number;
    }
    
    interface glo_C3_public extends glo_i_public {
    }
    